--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
